# FraudOxidizer

./: Cargo.toml  LICENSE-APACHE  README.md  challenge_brief_updated.md  flake.nix  fraud_oxidizer.js  fraud_patterns.ipynb  hypothesis.md  index.html  manifest.json  notebook.ipynb  pattern_kpis.ipynb
.github/workflows/: pages.yml  rust.yml
crates/model/: Cargo.toml
crates/model/src/: error.rs  lib.rs  main.rs
crates/model/src/data/: card_id.rs  human_review_status.rs  mod.rs  tests.rs  transaction.rs  transaction_id.rs  transactions.rs
crates/model/src/process/: card_statistics.rs  mod.rs
crates/model/src/process/passes/: card_amount_deviation.rs  card_testing_burst.rs  foreign_country_trip.rs  fraudulent_identity_link.rs  merchant_category_risk.rs  merchant_ring.rs  mod.rs
crates/ui/: Cargo.toml  Trunk.toml  index.html
crates/ui/assets/: manifest.json  site.webmanifest  sw.js
crates/ui/src/: app.rs  csv_loader.rs  lib.rs  main.rs  state.rs  transactions_table.rs
crates/ui/src/transactions_table/: card_id_filter.rs  icons.rs  review_command.rs  table_fields_state.rs  table_filter_state.rs  table_sort_state.rs  transactions_review.rs
crates/ui/src/transactions_table/review_plots/: burst_histogram.rs  burst_timeline.rs  card_amount_deviation_chart.rs  category_price_deviation_chart.rs  foreign_trip_table.rs  merchant_ring_chart.rs  mod.rs  risky_category_chart.rs
src/: error.rs  lib.rs  main.rs
src/data/: channel.rs  country.rs  merchant_category.rs  mod.rs  tests.rs  transaction.rs  transactions.rs
