[workspace]
# Try
# require version 2 to avoid "feature" additiveness for dev-dependencies
# https://doc.rust-lang.org/cargo/reference/resolver.html#feature-resolver-version-2
resolver = "2"

members = ["crates/*"]

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.92"
version = "0.0.1"

[workspace.lints.rust]
warnings = "warn"

[workspace.lints.clippy]
doc_markdown = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "warn"
invalid_html_tags = "warn"

[workspace.dependencies]
anyhow = "1.0.102"
chrono = "0.4"
my_country = { version = "0.1.17", features = [
    "all_countries",
    "iso_short_name",
    "unofficial_names",
] }
thiserror = "2.0"

[profile.release]
opt-level = 3

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 3
